# Manual-Segmentation-Tool

./: Application.cpp  Application.h  CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h  ManualSegmentationTool.aps  ManualSegmentationTool.cpp  ManualSegmentationTool.vcxproj  ManualSegmentationTool.vcxproj.filters  README.md  SegmentByPolygonFit.cpp  SegmentByPolygonFit.h  application.cpp  application.h  application_glfw_opengl2.cpp  application_glfw_opengl2.h  application_glfw_opengl3.cpp  application_glfw_opengl3.h  application_win32.cpp  application_win32.h  categories.cpp  categories.h  image_processing.cpp  image_processing.h  imgui.cpp  imgui.ini  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_win32.cpp  imgui_widgets.cpp  manual_segmentation_tool.cpp  mouseControlFunctions.cpp  mouse_control_functions.cpp  mouse_control_functions.h  resource.h  save_final_mask.cpp  save_final_mask.h  segment_by_polygon_fit.cpp  segment_by_polygon_fit.h  segmentation_method.cpp  (+1 more)
imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_win32.cpp  imgui_widgets.cpp
x64/Debug/: ManualSegmentationTool.pch  vc141.idb
x64/Debug/ManualSe.D43ADA41.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ManualSegmentationTool.lastbuildstate  ManualSegmentationTool.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
